--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-gesture-handler": "^1.9.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "^2.15.2"
+    "react-native-screens": "^2.15.2",
+    "react-native-webview": "^11.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -32,7 +33,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^6.5.1",
-    "husky": "^4.3.8",
+    "husky": "^5.0.9",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "react-test-renderer": "16.13.1",
