--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.2",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-webview": "^11.2.3"
   },
   "devDependencies": {
